# handbook-service

./: .dockerignore  Dockerfile  README.md  alembic.ini  config.example.yaml  config.py  docker-compose.yml  main.py  pyproject.toml  start.sh  test_data.sql
app/: dependencies.py  middleware.py  service.py
app/alembic/: env.py
app/alembic/versions/: 2025_05_21_1127-a33b318f1bba_init_tables.py
app/api/: router.py
app/api/v1/: organization.py  router.py
app/database/postgres/: __init__.py  connection.py  models.py
app/database/postgres/models/: __init__.py  activity.py  building.py  organization.py  phone.py
app/schemas/: activity.py  building.py  organization.py  phone.py
app/services/: organization.py
